<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.sc.idmji.RegistroHimnosActivity">

    <EditText
        android:id="@+id/registroId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:hint="@string/id"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/registroNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="124dp"
        android:hint="@string/nombre"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/registroContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="197dp"
        android:hint="@string/contenido"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="220dp" />

    <EditText
        android:id="@+id/registroCoro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/coro"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="328dp" />

    <EditText
        android:id="@+id/registroContenido2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="194dp"
        android:hint="@string/contenido2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="137dp"
        android:onClick="onClick"
        android:text="@string/btn"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="425dp" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnRegistro"
        android:layout_marginTop="-137dp"
        android:onClick="EliminarH"
        android:text="@string/btnEliminar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="425dp" />

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnEliminar"
        android:onClick="mostratH"
        android:text="mostrar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="425dp" />

</RelativeLayout>